agrega proyectos al portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,7 @@ header {
 
 .project_img {
     width: 55%;
+    border: 2px solid var(--color-black);
 }
 
 .container__projects-projectbox-txt {
